# prisma

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: prisma-ci.yml
app/: __init__.py  config.py
app/api/: errors.py  main.py  routes.py
app/generation/: __init__.py  context.py  service.py
app/models/: __init__.py  rag.py
app/observability/: __init__.py  inspect.py  models.py  runtime.py  timing.py
app/persistence/: vector_index.py
app/providers/: __init__.py  embeddings.py  generation.py
app/retrieval/: __init__.py  chunking.py  documents.py  identifiers.py  index.py  pipeline.py  search.py
app/workflow/: __init__.py  routing.py  runner.py  state.py
assets/prototype/: README.md  app.js  index.html  styles.css
configs/: defaults.toml
docs/: DEVELOPMENT.md  PRISMA_PHASE_0_REPOSITORY_SKELETON_PLAN_v0.1.md  PRISMA_PHASE_1_INGESTION_INDEXING_PLAN_v0.1.md  PRISMA_PHASE_2_BASELINE_RAG_API_PLAN_v0.1.md  PRISMA_PHASE_3_AGENT_WORKFLOW_PLAN_v0.1.md  PRISMA_PHASE_4_EVALUATION_HARNESS_PLAN_v0.1.md  PRISMA_PHASE_5_PROMPT_REGRESSION_PLAN_v0.1.md  PRISMA_PHASE_6_OBSERVABILITY_RUNTIME_METRICS_PLAN_v0.1.md  PRISMA_PHASE_7_CICD_EVALUATION_GATE_PLAN_v0.1.md  PRISMA_PROJECT_PLAN_v0.1.md  PRISMA_README_SHOWCASE_POLISH_PLAN_v0.1.md  PRISMA_REPOSITORY_ARCHITECTURE_v0.1.md  PRISMA_V1_ENGINEERING_MILESTONE_v1.0.md  PRISMA_V1_ENGINEERING_READINESS_REVIEW_v1.0.md
docs/adr/: README.md  (+4 more)
evals/: __init__.py  fingerprints.py  metrics.py  models.py  regression.py  report_models.py  reporting.py  runner.py
prompts/: baseline_rag.txt
tests/: conftest.py
(+39 files in other folders)
