[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prisma"
version = "0.1.0"
description = "Local-first production LLM engineering platform skeleton."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "qdrant-client>=1.10,<2",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["app", "app.*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
files = ["app"]
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
